# Pascal_interp

./: .gitignore  CMakeLists.txt  build.sh  main.cpp  start
inc/: error.hpp  parser.hpp
src/: .parser.cpp.swp  parser.cpp
unit_tests/: CMakeLists.txt  start.sh  unit_parser  unit_parser.cpp
unit_tests/data/: test1.txt  test2.txt  test3.txt
